lager en div og henter den

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1>Pokemon oppgaver</h1>
-    <script></script>
+    <div class="pokemon-container"></div>
+
+    <script>
+        const pokemonContainer = document.querySelector(".pokemon-container");
+        
+    </script>
+    
 </body>
 </html>
