--- a/oppgaver.html
+++ b/oppgaver.html
@@ -12,6 +12,11 @@
     <script>
         const pokemonContainer = document.querySelector(".pokemon-container");
         
+        async function fetchPokemon(id) {
+            const pokemonRequest = await fetch(`https://pokeapi.co/api/v2/pokemon/${id}/`);
+            let response = await pokemonRequest.json();
+            return response;
+        }
     </script>
     
 </body>
