kaller på funksjonen og jeg har fått hentet inn riktig

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -30,8 +30,8 @@
             } catch (error) {
                 console.error("Her klarte vi dessverre ikke å laste inn pokemons", error)
             }
-        }
-        
+        } fetchAndShowPokemonId()
+
     </script>
     
 </body>
