--- a/oppgaver.html
+++ b/oppgaver.html
@@ -41,7 +41,7 @@
                 pokemonContainer.style.display ="flex";
                 pokemonContainer.style.flexWrap = "wrap"
 
-                pokemonCard.innerHtml = `${pokemon.types[0].type.name}`;
+                pokemonCard.innerHTML = `${pokemon.types[0].type.name}`;
 
                 pokemonContainer.appendChild(pokemonCard);
                 
