--- a/oppgaver.html
+++ b/oppgaver.html
@@ -40,8 +40,13 @@
                 const pokemonCard = document.createElement("div");
                 pokemonContainer.style.display ="flex";
                 pokemonContainer.style.flexWrap = "wrap"
+                pokemonContainer.style.gap = "10px";
+                pokemonCard.style.width ="200px";
+                pokemonCard.style.height ="280px";
+                pokemonCard.style.padding ="10px";
+                pokemonCard.style.backgroundColor = "green";
 
-                pokemonCard.innerHTML = `${pokemon.types[0].type.name}`;
+                pokemonCard.innerHTML = `<img src="${pokemon.sprites.other[`official-artwork`].front_default}" style ="width: 200px" /> <h3>Navn: ${pokemon.name} <br> Type: ${pokemon.types[0].type.name}</h3>`;
 
                 pokemonContainer.appendChild(pokemonCard);
                 
