det var denne pokemon.sprites.other[official-artwork].front_default og denne pokemon.types[0].type.name jeg trengte hjelp med

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -44,7 +44,7 @@
                 pokemonCard.style.width ="200px";
                 pokemonCard.style.height ="280px";
                 pokemonCard.style.padding ="10px";
-                pokemonCard.style.backgroundColor = "green";
+                pokemonCard.style.backgroundColor = "blue";
 
                 pokemonCard.innerHTML = `<img src="${pokemon.sprites.other[`official-artwork`].front_default}" style ="width: 200px" /> <h3>Navn: ${pokemon.name} <br> Type: ${pokemon.types[0].type.name}</h3>`;
 
