--- a/oppgaver.html
+++ b/oppgaver.html
@@ -7,6 +7,27 @@
 </head>
 <body>
     <h1>Pokemon oppgaver</h1>
+    <select id="pokemon-filter-selection">
+        <option value="all">Fjern filtrering/Vis alle</option>
+        <option value="bug">Bug</option>
+        <option value="dark">Dark</option>
+        <option value="dragon">Dragon</option>
+        <option value="electric">Electric</option>
+        <option value="fairy">Fairy</option>
+        <option value="fighting">Fighting</option>
+        <option value="fire">Fire</option>
+        <option value="flying">Flying</option>
+        <option value="ghost">Ghost</option>
+        <option value="grass">Grass</option>
+        <option value="ground">Ground</option>
+        <option value="normal">Normal</option>
+        <option value="ice">Ice</option>
+        <option value="poison">Poison</option>
+        <option value="psychic">Psychic</option>
+        <option value="rock">Rock</option>
+        <option value="steel">Steel</option>
+        <option value="water">Water</option>
+    </select>
     <div class="pokemon-container"></div>
 
     <script>
