lager function getFilterValue og sender det videre til filterPokemon function som jeg skal lage

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -60,7 +60,12 @@
         fetchAndShowPokemonId()
 
         filterBtn.onclick = getFilterValue;
-        
+
+        function getFilterValue() {
+            const selectedType = document.querySelector("pokemon-filter-selection").value;
+            filterPokemon(selectedType);
+        }
+
 
         function showAllPokemon(pokemons) {
             pokemonContainer.innerHTML = "";
