lager en if statemen, starter med all

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -66,6 +66,15 @@
             filterPokemon(selectedType);
         }
 
+        function filterPokemon() {
+            const filteredPokemon = pokemonsId;
+            let typeFilter;
+
+            if (selectedType === "all") {
+                console.log("Viser alle pokemon", filteredPokemon);
+                showAllPokemon(filteredPokemon);
+        } 
+
 
         function showAllPokemon(pokemons) {
             pokemonContainer.innerHTML = "";
