--- a/oppgaver.html
+++ b/oppgaver.html
@@ -76,9 +76,15 @@
         } else {
             typeFilter = filteredPokemon.filter((pokemon) => pokemon.types[0].type.name === selectedType);
             console.log("filter", typeFilter);
-
+            
+         if (typeFilter.length === 0) {
+            console.log("hey");
+            pokemonContainer.innerHTML = "" + "<h2>Ingen pokemons hadde denne type, sry</h2>";
+            return;
+        } else {
+            showAllPokemon(typeFilter);
         }
-    }
+    }}
 
         function showAllPokemon(pokemons) {
             pokemonContainer.innerHTML = "";
