--- a/oppgaver.html
+++ b/oppgaver.html
@@ -96,7 +96,13 @@
                 pokemonCard.style.width ="200px";
                 pokemonCard.style.height ="280px";
                 pokemonCard.style.padding ="10px";
-                pokemonCard.style.backgroundColor = "blue";
+                pokemonCard.style.backgroundColor = 
+
+                pokemon.types[0].type.name == "water" 
+                ? "#1451E3"
+                : pokemon.types[0].type.name == "ice"
+                ? "#83D1F2"
+                :"white";
 
                 pokemonCard.innerHTML = `<img src="${pokemon.sprites.other[`official-artwork`].front_default}" style ="width: 200px" /> <h3>Navn: ${pokemon.name} <br> Type: ${pokemon.types[0].type.name}</h3>`;
 
