legger til farge til alle de ulike typene og legger til hvit hvis det på ett eller annet hvis bruker legger til kort som ikke passer type

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -102,6 +102,39 @@
                 ? "#1451E3"
                 : pokemon.types[0].type.name == "ice"
                 ? "#83D1F2"
+                : pokemon.types[0].type.name == "fighting"
+                ? "#983F24"
+                : pokemon.types[0].type.name == "fairy"
+                ? "#951843"
+                : pokemon.types[0].type.name == "ground"
+                ? "#A96D2C"
+                : pokemon.types[0].type.name == "steel"
+                ? "#60736C"
+                : pokemon.types[0].type.name == "rock"
+                ? "#47170C"
+                : pokemon.types[0].type.name == "grass"
+                ? "#12793C"
+                : pokemon.types[0].type.name == "electric"
+                ? "#E2E22A"
+                : pokemon.types[0].type.name == "dragon"
+                ? "#418B94"
+                : pokemon.types[0].type.name == "ghost"
+                ? "#A22967"
+                : pokemon.types[0].type.name == "psychic"
+                ? "#A22967"
+                : pokemon.types[0].type.name == "poison"
+                ? "#5A2D85"
+                : pokemon.types[0].type.name == "flying"
+                ? "#49667C"
+                : pokemon.types[0].type.name == "bug"
+                ? "#183D21"
+                : pokemon.types[0].type.name == "fire"
+                ? "#AA1E21"
+                : pokemon.types[0].type.name == "normal"
+                ? "#73525B"
+                : pokemon.types[0].type.name == "dark"
+                ? "#040603"
+                
                 :"white";
 
                 pokemonCard.innerHTML = `<img src="${pokemon.sprites.other[`official-artwork`].front_default}" style ="width: 200px" /> <h3>Navn: ${pokemon.name} <br> Type: ${pokemon.types[0].type.name}</h3>`;
