starter på addpokemoncard og lager feilhåndtering, begge feltene skal være utfylt

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -149,6 +149,13 @@
             });
         }
 
+        function addPokemonCard() {
+            if (cardNameTxt.value === "" || cardTypeTxt.value === "") {
+                alert("Du må fylle ut begge feltene");
+                return;
+            }
+        }
+
         
 
         
