vil også at feltene skal bli tømt

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -152,6 +152,8 @@
         function addPokemonCard() {
             if (cardNameTxt.value === "" || cardTypeTxt.value === "") {
                 alert("Du må fylle ut begge feltene");
+                cardNameTxt.value = "";
+                cardTypeTxt.value = "";
                 return;
             }
         }
