feilhåndtering igjen hva hvis bruker skriver type med store bokstaver vil ikke matche med små bokstaver som er i array. Gjør om til lowercase

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -156,6 +156,8 @@
                 cardTypeTxt.value = "";
                 return;
             }
+
+            const userWrittenType = cardTypeTxt.value.toLowerCase();
         }
 
         
