--- a/oppgaver.html
+++ b/oppgaver.html
@@ -160,7 +160,9 @@
             }
 
             const userWrittenType = cardTypeTxt.value.toLowerCase();
-            
+            if(!correctType.includes(userWrittenType)) {
+
+            }
         }
 
         
