gjør ferdig feilhåndtering med alert og input felt tømmes, og return

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -161,7 +161,10 @@
 
             const userWrittenType = cardTypeTxt.value.toLowerCase();
             if(!correctType.includes(userWrittenType)) {
-
+                alert("Skrivefeil? Her må du skrive en gyldig type")
+                cardNameTxt.value = "";
+                cardTypeTxt.value = "";
+                return;
             }
         }
 
