nytt kort er lagt til array som har alle, info om kort sendes til showallpokemon, og kodet så kortet blir lagret i localstorage

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -173,6 +173,11 @@
             pokemonNameTypeOnly.unshift(diyPokemonCard);
             console.log("Ny pokemon", diyPokemonCard);
             console.log("hele array", pokemonNameTypeOnly);
+            showAllPokemon(pokemonNameTypeOnly);
+
+            addPokemonCardSaved.push(diyPokemonCard);
+            localStorage.setItem("Mine lagde kort", JSON.stringify(addPokemonCardSaved));
+            
 
         }
 
