--- a/oppgaver.html
+++ b/oppgaver.html
@@ -176,7 +176,7 @@
             }
             const diyPokemonCard = {
                 name: cardNameTxt.value,
-                type: newTypeTxt.value.toLowerCase(),
+                type: cardTypeTxt.value.toLowerCase(),
             };
             pokemonImageNameTypeOnly.unshift(diyPokemonCard);
             console.log("Ny pokemon", diyPokemonCard);
