laget pokemon skal ha default bilde, vurderer å legge inn bilde her kan også gjøre det i showallpokemon

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -177,6 +177,7 @@
             const diyPokemonCard = {
                 name: cardNameTxt.value,
                 type: cardTypeTxt.value.toLowerCase(),
+                image: "",
             };
             pokemonImageNameTypeOnly.unshift(diyPokemonCard);
             console.log("Ny pokemon", diyPokemonCard);
