bilde funker nå

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -177,7 +177,7 @@
             const diyPokemonCard = {
                 name: cardNameTxt.value,
                 type: cardTypeTxt.value.toLowerCase(),
-                image: `./assets/${pokemonBall}.jpg`,
+                image: `./assets/pokemonBall.jpg`,
             };
             pokemonImageNameTypeOnly.unshift(diyPokemonCard);
             console.log("Ny pokemon", diyPokemonCard);
