vil at input felt skal tømmes etter at kort blir lagt til

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -187,6 +187,8 @@
             addPokemonCardSaved.push(diyPokemonCard);
             localStorage.setItem("Mine lagde kort", JSON.stringify(addPokemonCardSaved));
 
+            cardNameTxt.value = "";
+            cardTypeTxt.value = "";
 
         }
 
