laget showmysavedcards function kaller på showallpokemon og sender parameter, hvis bruker trykker på knapp og det ikke er noen lagrete kort vil den få alert

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -177,6 +177,14 @@
             console.log(mySavedCards);
         }
 
+        function showMySavedCards() {
+            if(mySavedCards.length > 0) {
+                showAllPokemon(showMySavedCards)
+            } else {
+                alert("Her er det ingen lagrete kort enda")
+            }
+        }
+
         function addPokemonCard() {
             if (cardNameTxt.value === "" || cardTypeTxt.value === "") {
                 alert("Du må fylle ut begge feltene");
