retter en skrivefeil

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -179,7 +179,7 @@
 
         function showMySavedCards() {
             if(mySavedCards.length > 0) {
-                showAllPokemon(showMySavedCards)
+                showAllPokemon(mySavedCards)
             } else {
                 alert("Her er det ingen lagrete kort enda")
             }
