retter enda en skrivefeil, knapp på kortene dukker ikke opp, jobber med det

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -169,7 +169,7 @@
             });
         }
 
-        showSavedBtn.addEventListener("click", showSavedCards);
+        showSavedBtn.addEventListener("click", showMySavedCards);
 
         function savePokemonCard(pokemon) {
             mySavedCards.push(pokemon);
