--- a/oppgaver.html
+++ b/oppgaver.html
@@ -120,7 +120,7 @@
                 pokemonContainer.style.flexWrap = "wrap"
                 pokemonContainer.style.gap = "10px";
                 pokemonCard.style.width ="200px";
-                pokemonCard.style.height ="280px";
+                pokemonCard.style.height ="350px";
                 pokemonCard.style.padding ="10px";
                 pokemonCard.style.backgroundColor = 
 
@@ -163,7 +163,7 @@
                 
                 :"white";
                 pokemonCard.innerHTML = `<img src="${pokemon.image}" style ="width: 200px" /> <h3>Navn: ${pokemon.name} <br> Type: ${pokemon.type}</h3>`;
-
+                pokemonCard.appendChild(saveBtn);
                 pokemonContainer.appendChild(pokemonCard);
                 
             });
