--- a/oppgaver.html
+++ b/oppgaver.html
@@ -188,6 +188,7 @@
                 showAllPokemon(mySavedCards)
             } else {
                 alert("Her er det ingen lagrete kort enda")
+                return;
             }
         }
 
