testet ut litt ulike metoder å løse vise lagrete kort på men endte opp med samme metode jeg hadde fra start, endret på tekst til showsavedbtn

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -33,7 +33,7 @@
         <option value="water">Water</option>
     </select>
     <button class="filter-btn">Filtrer etter type</button>
-   <button class="show-saved-btn">Se Lagrete kort</button> <br><br>
+   <button class="show-saved-btn">Se alle lagrete kort</button> <br><br>
     <div class="pokemon-container"></div>
 
     <script>
@@ -175,6 +175,7 @@
         }
 
         showSavedBtn.addEventListener("click", showMySavedCards);
+        
 
         function savePokemonCard(pokemon) {
             mySavedCards.push(pokemon);
