--- a/oppgaver.html
+++ b/oppgaver.html
@@ -109,7 +109,7 @@
             pokemons.forEach((pokemon, index) => {
 
                 //delete
-                const deleBtn = document.createElement("button");
+                const deleteBtn = document.createElement("button");
                 deleteBtn.innerHTML = "Slett ansatt";
                 deleteBtn.style.backgroundColor = "red";
                 deleteBtn.addEventListener("click", function() {
@@ -175,7 +175,7 @@
                 
                 :"white";
                 pokemonCard.innerHTML = `<img src="${pokemon.image}" style ="width: 200px" /> <h3>Navn: ${pokemon.name} <br> Type: ${pokemon.type}</h3>`;
-                pokemonCard.appendChild(saveBtn);
+                pokemonCard.append(deleteBtn, saveBtn);
                 pokemonContainer.appendChild(pokemonCard);
                 
             });
