--- a/oppgaver.html
+++ b/oppgaver.html
@@ -181,7 +181,7 @@
           pokemonContainer.style.display = "flex";
           pokemonContainer.style.flexWrap = "wrap";
           pokemonContainer.style.gap = "10px";
-          pokemonCard.style.width = "200px";
+          pokemonCard.style.width = "210px";
           pokemonCard.style.height = "370px";
           pokemonCard.style.padding = "10px";
           pokemonCard.style.backgroundColor =
@@ -223,7 +223,7 @@
               ? "#040603"
               : "white";
           pokemonCard.innerHTML = `<img src="${pokemon.image}" style ="width: 200px" /> <h3>Navn: ${pokemon.name} <br> Type: ${pokemon.type}</h3>`;
-          pokemonCard.append(deleteBtn, saveBtn, editTxtBtn, changeNameInput, changeTypeInput);
+          pokemonCard.append(deleteBtn, saveBtn, changeNameInput, changeTypeInput, editTxtBtn,);
           pokemonContainer.appendChild(pokemonCard);
         });
       }
@@ -255,6 +255,10 @@
           alert("Her er det ingen lagrete kort enda");
           return;
         }
+      }
+
+      function editTxtCard(index) {
+        
       }
 
       function addPokemonCard() {
